--- a/aipollo_web/scoreanalyzer/templates/scoreanalyzer/analyzer.html
+++ b/aipollo_web/scoreanalyzer/templates/scoreanalyzer/analyzer.html
@@ -8,14 +8,16 @@
 </head>
 <body>
 
-<div id="imagediv" style="position:absolute">
+<div style="display: flex; justify-content: center"> 
+<div id="imagediv" style="position: relative">
   <img src="{% static 'scoreanalyzer/bleib_rotated.jpg' %}">
 </div>
-
+</div>
 
 <script>
     const scoreElementsJson = '{{ score_elements_json|safe }}';
     const POINT_RADIUS = 1
+    const COLORS = {'half_note': 'red', 'quarter_note': 'green'}
 
     // Create an HTML element for each ScoreElement.
     var scoreElements = renderScoreElements(JSON.parse(scoreElementsJson));
@@ -30,38 +32,43 @@
         var scoreElements = []
         for (const scoreElement of scoreElementsJsonParsed)
         {
-            // Ignore elements (and their children) that have no pixels.
-            if (scoreElement.pixels.length == 0)
+            elementType = scoreElement.type._name_
+
+            // Don't draw staff lines.
+            if (elementType == 'staff')
             {
                 continue;
             }
-            var scoreElementSvg = document.createElementNS("http://www.w3.org/2000/svg", "svg");
-            scoreElementSvg.classList.add("draggable");
-            scoreElementSvg.classList.add("scoresymbol");
+            var scoreElementSvg = document.createElementNS('http://www.w3.org/2000/svg', 'svg');
+            scoreElementSvg.classList.add('draggable');
+            scoreElementSvg.classList.add('scoresymbol');
 
             const minY = Math.min(...scoreElement.pixels.map(p => p.y));
             const minX = Math.min(...scoreElement.pixels.map(p => p.x));
             const maxY = Math.max(...scoreElement.pixels.map(p => p.y));
             const maxX = Math.max(...scoreElement.pixels.map(p => p.x));
 
-            scoreElementSvg.setAttribute("height", maxY - minY);
-            scoreElementSvg.setAttribute("width", maxX - minX);
+            scoreElementSvg.setAttribute('height', maxY - minY);
+            scoreElementSvg.setAttribute('width', maxX - minX);
             scoreElementSvg.style.top = minY;
             scoreElementSvg.style.left = minX;
 
             // Create a SVG circle for each pixel belonging to the score element.
             for (const pixel of scoreElement.pixels)
             {
-                var circle = document.createElementNS("http://www.w3.org/2000/svg", "circle");
-                circle.setAttribute("cy", pixel.y - minY);
-                circle.setAttribute("cx", pixel.x - minX);
-                circle.setAttribute("r", POINT_RADIUS);
+                var circle = document.createElementNS('http://www.w3.org/2000/svg', 'circle');
+                circle.setAttribute('cy', pixel.y - minY);
+                circle.setAttribute('cx', pixel.x - minX);
+                circle.setAttribute('r', POINT_RADIUS);
                 scoreElementSvg.appendChild(circle)
+
+                circle.style.fill = COLORS[elementType]
+                circle.style.fillOpacity = 0.3
             }
 
             scoreElements.push(scoreElementSvg)
             scoreElements.concat(renderScoreElements(scoreElement.children))
-            document.getElementById("imagediv").appendChild(scoreElementSvg);
+            document.getElementById('imagediv').appendChild(scoreElementSvg);
         }
 
         return scoreElements
