Minor style improvements in HTML, CSS, and JavaScript files

--- a/aipollo_web/scoreanalyzer/static/scoreanalyzer/style.css
+++ b/aipollo_web/scoreanalyzer/static/scoreanalyzer/style.css
@@ -2,7 +2,6 @@ body {
   margin: 0px;
 }
 
-
 .scoresymbol {
   position: absolute;
 }
@@ -12,16 +11,26 @@ body {
   user-select: none;
 }
 
-#topheader {
-  display: flex;
-  flex-direction: row-reverse;
-  background-color: rgb(231, 231, 231);
-}
-
 .toplink {
   color: #333333;
   text-decoration: none;
   font-size: large;
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
   margin-right: 2%;
+}
+
+#topheader {
+  display: flex;
+  flex-direction: row-reverse;
+  background-color: rgb(231, 231, 231);
+}
+
+#maincontainer {
+  display: flex; 
+  flex-direction: column;
+}
+
+#content {
+  display: flex; 
+  justify-content: center;
 }
